# example_rext_project

./: .gitignore  ADMIN_PANEL.md  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend-dev  README.md  SESSION_MANAGEMENT_IMPLEMENTATION_PLAN.md  SESSION_MANAGEMENT_TESTING_GUIDE.md  build.rs  docker-compose.yml  example.env  rext.toml  sqlite.db
backend/: lib.rs  main.rs
backend/auth/: handlers.rs  router.rs
backend/bridge/: mod.rs
backend/bridge/handlers/: admin.rs  auth.rs  mod.rs  permissions.rs  roles.rs  websocket.rs
backend/bridge/middleware/: admin.rs  admin_auth.rs  auth.rs  logging.rs  mod.rs
backend/bridge/routes/: admin.rs  auth.rs
backend/bridge/types/: admin.rs  auth.rs  logging.rs
backend/control/services/: admin_service.rs  auth_service.rs  database_service.rs  mod.rs  permission_service.rs  server_config.rs  session_service.rs  startup.rs  system_monitor.rs  token_service.rs  user_service.rs
backend/domain/: mod.rs  permissions.rs  user.rs
backend/entity/models/: audit_logs.rs  database_metrics.rs  mod.rs  prelude.rs  roles.rs  user_sessions.rs  users.rs
backend/infrastructure/: app_error.rs  database.rs  jwt_claims.rs  logging.rs  mod.rs  openapi.rs  query_performance.rs  server.rs  websocket.rs
backend/infrastructure/macros/: permission_macro.rs
frontend/: .eslintrc-auto-import.json  CONFIGURATION.md  README.md  auto-imports.d.ts  eslint.config.ts  index.html  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/config/: unified.config.ts
frontend/scripts/: cleanup-configs.js
frontend/src/: App.vue  main.ts
frontend/src/client/: sdk.gen.ts
frontend/src/composables/: useCounter.ts
frontend/src/router/: index.ts
frontend/src/styles/: global.css
frontend/src/views/: HomeView.vue  LoginView.vue  ProfileView.vue  RegisterView.vue
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000002_create_audit_logs.rs  m20250101_000003_add_admin_role_to_users.rs  m20250101_000004_create_database_metrics.rs  m20250101_000005_create_user_sessions.rs  m20250720_000001_create_users.rs  m20250726_190121_user_last_login_field.rs  m20250727_055016_user_roles.rs
scripts/: build-production.sh  dev-setup.sh
src/: main.rs
src/auth/: handlers.rs  mod.rs  router.rs
src/entities/: users.rs
(+19 files in other folders)
