[package]
name = "project_rext_1"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rand_core = { version = "0.6", features = ["std"] }
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
