[package]
name = "project_rext_1"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "project_rext_1"
path = "backend/main.rs"

[dependencies]
apalis = { version = "0.7.2", features = ["retry"] }
apalis-cron = "0.7.2"
apalis-sql = { version = "0.7.2", features = ["sqlite","tokio"] }
argon2 = "0.5.3"
axum = "0.8.4"
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = {version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = [
    "axum",
] }

uuid = { version = "1.17.0", features = ["v4", "serde"] }
base64 = "0.21.7"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
sysinfo = "0.36.1"
